--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ a {
 }
 
 .heading-primary .heading-primary-i {
-  color: #c69963;
+  /* color: #c69963; */
 }
 
 .btn-white {
@@ -134,7 +134,7 @@ a {
 }
 
 .text-primary-i {
-  color: #c69963;
+  /* color: #c69963; */
 }
 
 .box-1-vr-line {
@@ -153,5 +153,50 @@ a {
   top: 54%;
   font-size: 25px;
   z-index: 3;
-  color: #c69963;
+  color: #fff;
+}
+
+.box-2 {
+  position: absolute;
+  background-color: rgba(236, 225, 225, 0.169);
+  padding: 30px;
+  left: 30%;
+  top: 55%;
+  width: 20%;
+  z-index: 5;
+}
+
+.box-2-content .box-icon {
+  padding: 10px 0px;
+  width: 40%;
+  background-color: #fcfcfc;
+  border-radius: 40px;
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.box-2-content .box-p {
+  color: #fcfcfc;
+  font-size: 18px;
+  font-weight: 700;
+}
+.box-2-vr-line {
+  border-bottom: 2px solid #fff;
+  height: 10vh;
+  width: 10%;
+  background-color: transparent;
+  position: absolute;
+  left: 50%;
+  top: 54.5%;
+  z-index: 1;
+}
+
+.box-2-circle {
+  position: absolute;
+  left: 59.8%;
+  top: 62.5%;
+  font-size: 25px;
+  z-index: 3;
+  color: #fff;
 }
